front end shell basic but working

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,13 +9,13 @@
   <nav>
     <ul>
       <li>
-        <a href="/zombies">Books</a>
+        <a href="/books">Books</a>
       </li>
       <li>
-        <a href="/victims">Authors</a>
+        <a href="/authors">Authors</a>
       </li>
       <li>
-        <a href="/bitings">Publishers</a>
+        <a href="/publishers">Publishers</a>
       </li>
     </ul>
   </nav>
