--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,12 +2,16 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Bookshop</title>
+  <link rel="stylesheet" type="text/css" href="/styles/tables.css">
 </head>
 <body>
 <main class="flex flex--row">
   <nav>
     <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
       <li>
         <a href="/books">Books</a>
       </li>
