--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>Bookshop</title>
   <link rel="stylesheet" type="text/css" href="/styles/tables.css">
+  <link rel="stylesheet" type="text/css" href="/styles/nav.css">
 </head>
 <body>
 <main class="flex flex--row">
-  <nav>
+  <nav class="navbar">
     <ul>
       <li>
         <a href="/">Home</a>
