--- a/public/styles/tables.css
+++ b/public/styles/tables.css
@@ -7,7 +7,7 @@ td, th {
 td {
   padding: 10px 20px 0px 0px;
 
-  
+
 }
 
 th {
@@ -25,4 +25,8 @@ table {
 
 tr:hover{
   background-color: lightblue;
+}
+
+tr:first-child:hover {
+    background-color: lightgrey;
 }
