--- a/views/books/index.erb
+++ b/views/books/index.erb
@@ -16,7 +16,7 @@
   </tr>
   <% for book in @books %>
   <tr>
-    <td><%= book.author[0]%></td>
+    <td><%= book.authors[0].full_name if book.authors.length > 0%></td>
     <td>|</td>
     <td><%= book.name %></td>
     <td>|</td>
