--- a/views/books/index.erb
+++ b/views/books/index.erb
@@ -15,7 +15,7 @@
     <th>Cost</th>
   </tr>
   <% for book in @books %>
-  <tr>
+  <tr onclick="location.href='/books/<%= book.id %>'"><a href="/books/<%= book.id %>"></a>
     <td><%= book.authors[0].full_name if book.authors.length > 0%></td>
     <td>|</td>
     <td><%= book.name %></td>
@@ -32,3 +32,5 @@
   </tr>
   <% end %>
 </table>
+<br><br><br>
+<a href="/books/new/">Add New Book</a>
