--- a/views/books/new.erb
+++ b/views/books/new.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/books/new/">
+<form method="post" action="/books/new">
   <label for="book-name">Book Name</label>
   <input type="text" name="name" id="book-name" value="<%=@books.name%>">
   <label for="description">Description</label>
