--- a/views/books/new.erb
+++ b/views/books/new.erb
@@ -1,13 +1,16 @@
 <form method="post" action="/books/new">
+<% for book in @books%>
+  <label for="<%= book.id %>"></label>
+<% end %>
   <label for="book-name">Book Name</label>
-  <input type="text" name="name" id="book-name" value="<%=@books.name%>">
+  <input type="text" name="name" id="book-name" >
   <label for="description">Description</label>
-  <input type="text" name="description" id="description" value="<%=@books.description%>">
+  <input type="text" name="description" id="description" >
   <label for="quantity">Quantity</label>
-  <input type="number" name="quantity" id="quantity" value="<%= @books.quantity%>">
+  <input type="number" name="quantity" id="quantity" >
   <label for="price">Price</label>
-  <input type="number" step="0.01" name="price" id="price" value="<%= @books.price%>">
+  <input type="number" step="0.01" name="price" id="price" >
   <label for="cost">Cost</label>
-  <input type="cost" step="0.01" name="cost" id="cost" value="<%= @books.cost%>">
+  <input type="cost" step="0.01" name="cost" id="cost" >
       <input type="submit" value="Add New Book">
 </form>
