--- a/views/books/show.erb
+++ b/views/books/show.erb
@@ -8,6 +8,6 @@
   <label for="price">Price</label>
   <input type="number" step="0.01" name="price" id="price" value="<%= @books.price%>">
   <label for="cost">Cost</label>
-  <input type="cost" step="0.01" name="cost" id="cost" value="<%= @books.cost%>">
+  <input type="number" step="0.01" name="cost" id="cost" value="<%= @books.cost%>">
       <input type="submit" value="Update Book">
 </form>
