working on add authors, but other adds working.  Returns form, but form does not post yet

--- a/views/authors/index.erb
+++ b/views/authors/index.erb
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul>
     <li>
-      <a href="/authors/new/">Add New Author</a>
+      <a href="/authors/new">Add New Author</a>
     </li>
     <li>
       <a href="/authors/delete">Delete Author</a>
