edit working on publisher buttons

--- a/views/books/index.erb
+++ b/views/books/index.erb
@@ -39,7 +39,7 @@
     <td>|</td>
     <td>£<%= book.cost %></td>
     <td>|</td>
-    <td><a format="button" href="/books/<%= book.id %>">Edit</td>
+    <td><a href="/books/<%= book.id %>">Edit</td>
   </tr>
   <% end %>
 </table>
