--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Bookshop</title>
+  <title>Homegrown Books</title>
   <link rel="stylesheet" type="text/css" href="/styles/tables.css">
   <link rel="stylesheet" type="text/css" href="/styles/nav.css">
 </head>
@@ -25,6 +25,7 @@
     </ul>
   </nav>
   <section id="content">
+  
   <%= yield %>
   </section>
   </main>
