edit working for publishers

--- a/views/publishers/show.erb
+++ b/views/publishers/show.erb
@@ -1,5 +1,5 @@
 <form method="post" action="/publishers/<%= @publishers.id %>">
   <label for="publisher-name">Publisher Name</label>
-  <input type="text" name="name" id="publisher-name" value="<%=@publisher.name%>">
-      <input type="submit" value="Update Book">
+  <input type="text" name="name" id="publisher-name" value="<%=@publishers.name%>">
+      <input type="submit" value="Update Publisher">
 </form>
