--- a/views/publishers/index.erb
+++ b/views/publishers/index.erb
@@ -6,6 +6,9 @@
     <li>
       <a href="/publishers/delete">Delete Publisher</a>
     </li>
+    <li>
+      <a href="/publishers/edit">Edit Publisher</a>
+    </li>
   </ul>
 </nav>
 
@@ -20,6 +23,7 @@
   <tr>
     <td><%= publisher.name %></td>
     <td><a href="/publishers/<%= publisher.id %>">Edit</td>
+
   </tr>
   <% end %>
 </table>
