--- a/views/books/index.erb
+++ b/views/books/index.erb
@@ -29,7 +29,7 @@
     <th>Cost</th>
   </tr>
   <% for book in @books %>
-  <tr>
+  <tr class = "books">
     <td><%= book.authors[0].full_name if book.authors.length > 0%></td>
     <td>|</td>
     <td><%= book.name %></td>
