delete working for books

--- a/views/books/delete.erb
+++ b/views/books/delete.erb
@@ -1,10 +1,12 @@
-<form method="post" action="/books/<%= @books.id %>">
+<h1>Confirm Deletion</h1>
+
+<form method="post" action="/books/<%= @books.id %>/delete">
   <label for="book-name">Book Name</label>
   <input type="text" name="name" id="book-name" value="<%=@books.name%>">
   <label for="description">Description</label>
   <input type="text" name="description" id="description" value="<%=@books.description%>">
   <label for="quantity">Quantity</label>
-  <input type="number" name="quantity" id="quantity" value="<%= @books.quantity%>">
+  <input type="number" name="quantity" id="quantity" value="0">
   <label for="price">Price</label>
   <input type="number" step="0.01" name="price" id="price" value="<%= @books.price%>">
   <label for="cost">Cost</label>
