--- a/views/books/delete.erb
+++ b/views/books/delete.erb
@@ -6,7 +6,7 @@
   <label for="description">Description</label>
   <input type="text" name="description" id="description" value="<%=@books.description%>">
   <label for="quantity">Quantity</label>
-  <input type="number" name="quantity" id="quantity" value="0">
+  <input type="number" name="quantity" id="quantity" value="<%=@books.quantity%>">
   <label for="price">Price</label>
   <input type="number" step="0.01" name="price" id="price" value="<%= @books.price%>">
   <label for="cost">Cost</label>
