adding low stock functionality

--- a/public/styles/tables.css
+++ b/public/styles/tables.css
@@ -26,3 +26,7 @@ tr:hover{
 tr:first-child:hover {
   background-color: lightgrey;
 }
+
+.out-of-stock {
+  background-color: rgb(242, 141, 141);
+}
