--- a/views/authors/show.erb
+++ b/views/authors/show.erb
@@ -3,5 +3,10 @@
   <input type="text" name="first_name" id="author-first-name" value="<%=@authors.first_name%>">
   <label for="author-last-name">First Name</label>
   <input type="text" name="last_name" id="author-last-name" value="<%=@authors.last_name%>">
+  <select name="publisher_id" id="publisher-select">
+    <% for publisher in @publishers%>
+      <option value="<%=publisher.id%>"><%= publisher.name %></option>
+    <% end %>
+  </select>
       <input type="submit" value="Update Author">
 </form>
