--- a/views/books/new.erb
+++ b/views/books/new.erb
@@ -1,5 +1,11 @@
 <form method="post" action="/books">
 
+  <select name="author_id" id="author-select">
+    <% for author in @authors%>
+      <option value="<%=author.id%>"><%= author.full_name %></option>
+    <% end %>
+  </select>
+
   <label for="book-name">Book Name</label>
   <input type="text" name="name" id="book-name" >
 
