--- a/views/authors/new.erb
+++ b/views/authors/new.erb
@@ -4,9 +4,9 @@
   <label for="last-name">Last Name</label>
   <input type="text" name="last_name" id="last-name" value="">
   <select name="publisher_id" id="publisher-select">
-  <% for publisher in @publishers%>
-  <option value="<%=publisher.id%>"><%= publisher.name %></option>
-  <% end %>
-</select>
-      <input type="submit" value="Update Author">
+    <% for publisher in @publishers%>
+      <option value="<%=publisher.id%>"><%= publisher.name %></option>
+    <% end %>
+  </select>
+      <input type="submit" value="Add New Author">
 </form>
