--- a/views/books/new.erb
+++ b/views/books/new.erb
@@ -2,7 +2,7 @@
 
   <select name="author_id" id="author-select">
     <% for author in @authors%>
-      <option value="<%=author.id%>"><%= author.full_name %></option>
+      <option value="<%=author.id%>"><%= author.first_name %> <%= author.last_name %></option>
     <% end %>
   </select>
 
