changing css, have eliminated persistent verticle line issue

--- a/public/styles/tables.css
+++ b/public/styles/tables.css
@@ -1,16 +1,14 @@
-
-
-td, th {
+/* td, th {
   text-align: center;
   font-family: arial;
 }
 
 td {
   padding: 10px 20px 0px 0px;
-}
+} */
 
 th {
-  padding: 0px 20px 10px 0px;
+  padding: 0px 30px 30px 0px;
   font-family: arial;
   border: none;
 }
@@ -19,6 +17,7 @@ table {
   border: 2px solid black;
   font-family: arial;
   background-color: lightgrey;
+  border-collapse: collapse;
 }
 
 tr:hover{
@@ -29,13 +28,11 @@ tr:first-child:hover {
   background-color: lightgrey;
 }
 
+
 .out-of-stock {
   background-color: rgb(250, 200, 212);
 }
 
-.good-stock {
-  background-color: lightgrey; 
-}
 
 .low-stock {
   background-color: rgb(223, 236, 182);
