--- a/views/books/index.erb
+++ b/views/books/index.erb
@@ -33,9 +33,7 @@
   <% for book in @books %>
   <tr class=<% if book.quantity == 0 %>
     <%= "out-of-stock" %>
-    <% elsif book.quantity >= 3 %>
-    <%= "good-stock" %>
-    <% elsif book.quantity <= 3 %>
+    <% elsif book.quantity < 3 %>
     <%= "low-stock" %>
     <% end %>>
     <td><%= book.authors[0].full_name if book.authors.length > 0%></td>
