--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="/styles/nav.css">
 </head>
 <body>
-<main class="flex flex--row">
+<main class="main">
   <nav class="navbar">
     <ul>
       <li>
@@ -25,7 +25,7 @@
     </ul>
   </nav>
   <section id="content">
-  
+
   <%= yield %>
   </section>
   </main>
