css changes to tables and buttons

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,9 +5,10 @@
   <title>Homegrown Books</title>
   <link rel="stylesheet" type="text/css" href="/styles/tables.css">
   <link rel="stylesheet" type="text/css" href="/styles/nav.css">
+  <link rel="stylesheet" type="text/css" href="/styles/style.css">
 </head>
-<body>
-<main class="main">
+<body class="main">
+<main>
   <nav class="navbar">
     <ul>
       <li>
