--- a/public/styles/tables.css
+++ b/public/styles/tables.css
@@ -1,11 +1,15 @@
-/* td, th {
+td, th {
   text-align: center;
   font-family: arial;
 }
 
 td {
   padding: 10px 20px 0px 0px;
-} */
+}
+
+td a {
+  border: 1px black;
+}
 
 th {
   padding: 0px 30px 30px 0px;
@@ -16,7 +20,8 @@ th {
 table {
   border: 2px solid black;
   font-family: arial;
-  background-color: lightgrey;
+  font-size: 22px;
+  background-color: rgb(228, 228, 228);
   border-collapse: collapse;
 }
 
@@ -25,9 +30,8 @@ tr:hover{
 }
 
 tr:first-child:hover {
-  background-color: lightgrey;
+  background-color: rgb(228, 228, 228);
 }
-
 
 .out-of-stock {
   background-color: rgb(250, 200, 212);
