--- a/views/authors/index.erb
+++ b/views/authors/index.erb
@@ -14,11 +14,15 @@
     <th></th>
     <th>Last Name</th>
     <th></th>
+    <th>Edit Author</th>
+    <th></th>
+    <th>Delete Author</th>
+  
   </tr>
   <% for author in @authors %>
   <tr>
     <td><%= author.first_name %></td>
-    <td></td>
+    <td>|</td>
     <td><%= author.last_name %></td>
     <td>|</td>
     <td><a href="/authors/<%= author.id %>">Edit</td>
