changed author and publisher spacing

--- a/views/publishers/index.erb
+++ b/views/publishers/index.erb
@@ -12,9 +12,9 @@
   <tr>
     <th>Name</th>
     <th></th>
-    <th>Edit Publisher</th>
+    <th>Edit</th>
     <th></th>
-    <th>Delete Publisher</th>
+    <th>Delete</th>
   </tr>
   <% for publisher in @publishers %>
   <tr>
