--- a/views/authors/index.erb
+++ b/views/authors/index.erb
@@ -14,10 +14,10 @@
     <th></th>
     <th>Last Name</th>
     <th></th>
-    <th>Edit Author</th>
+    <th>Edit</th>
     <th></th>
-    <th>Delete Author</th>
-  
+    <th>Delete</th>
+
   </tr>
   <% for author in @authors %>
   <tr>
