--- a/public/styles/tables.css
+++ b/public/styles/tables.css
@@ -7,12 +7,16 @@ td {
   padding: 10px 20px 0px 0px;
 }
 
-td a {
-  border: 1px black;
+table a {
+  border: 1px solid black;
+  color: black;
+  padding: 5px 5px 5px 5px;
+  text-decoration: none;
+  background-color: rgb(130, 223, 171);
 }
 
 th {
-  padding: 0px 30px 30px 0px;
+  padding: 30px 30px 10px 0px;
   font-family: arial;
   border: none;
 }
