--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,3 @@
-<h1>Homegrown Books</h1>
+<center><h1>Homegrown Books</h1>
 
-<p>Sample text </p>
-<img src="public/images/books.jpg">
+<img src='/images/books.jpeg'></center>
