--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,16 +1,21 @@
 h1 {
   font-family: arial;
   font-size: 80px;
+  color: rgb(0, 0, 0, 0.80)
+  background-color: rgb(255, 255, 255, 0.80)
 }
 
 h2 {
   font-family: arial;
   font-size: 40px;
+
 }
 
 .main {
   background: rgb(175, 210, 197)url('/images/william_m.jpg');
 }
+
+
 
 /* input[type="submit"] {
   text-transform: uppercase;
