--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,35 +1,54 @@
 h1 {
   font-family: arial;
   font-size: 80px;
-  color: rgb(0, 0, 0, 0.80)
-  background-color: rgb(255, 255, 255, 0.80)
+  color: rgb(0, 0, 0, 0.80);
 }
 
 h2 {
   font-family: arial;
   font-size: 40px;
-
 }
 
 .main {
-  background: rgb(175, 210, 197)url('/images/william_m.jpg');
+  background: url('/images/william_m.jpg');
 }
 
+form {
+    position:absolute;
+    top:20%;
+    right:0;
+    left:30%;
+    display: block;
+}
 
-
-/* input[type="submit"] {
+input[type="submit"] {
   text-transform: uppercase;
-  font-family: 'Special Elite', cursive;
+  font-family: arial;
+  height: 70px;
+  width: 300px;
+}
+
+input {
+  height: 30px;
+  width: 300px;
+  font-family: arial;
+}
+
+label {
+  height: 30px;
+  font-family: arial;
+  font-size: 30px;
+  display: block;
+  /* padding: 20px 20px 20px 20px; */
 }
 
 select {
- width: 150px;
+ width: 300px;
+ height: 40px;
  padding: 5px 35px 5px 5px;
  margin: 15px 0;
- font-size: 0.8em;
- -webkit-appearance: none;
- background: url('/images/hazard.png') 96% / 15% no-repeat papayawhip;
+ font-size: 2em;
  font-family: 'Merriweather', serif;
  border: 1px solid #eee;
  display: block;
-}  */
+}
