--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -23,9 +23,16 @@ form {
 
 input[type="submit"] {
   text-transform: uppercase;
-  font-family: arial;
-  height: 70px;
+  font-family: 'Merriweather', serif;
+  font-size: 30px;
+  height: 100px;
   width: 300px;
+  display: block;
+  padding: 5px 35px 5px 5px;
+  border-radius: 30px;
+  background-color: rgb(130, 223, 171);
+  border: 2px solid black;
+  align: center; 
 }
 
 input {
@@ -36,7 +43,7 @@ input {
 
 label {
   height: 30px;
-  font-family: arial;
+  font-family: 'Merriweather', serif;
   font-size: 30px;
   display: block;
   /* padding: 20px 20px 20px 20px; */
