--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -17,22 +17,22 @@ form {
     position:absolute;
     top:20%;
     right:0;
-    left:30%;
+    left:35%;
     display: block;
 }
 
 input[type="submit"] {
   text-transform: uppercase;
   font-family: 'Merriweather', serif;
-  font-size: 30px;
-  height: 100px;
+  font-size: 27px;
+  height: 80px;
   width: 300px;
   display: block;
   padding: 5px 35px 5px 5px;
   border-radius: 30px;
   background-color: rgb(130, 223, 171);
   border: 2px solid black;
-  align: center; 
+
 }
 
 input {
@@ -46,7 +46,7 @@ label {
   font-family: 'Merriweather', serif;
   font-size: 30px;
   display: block;
-  /* padding: 20px 20px 20px 20px; */
+  padding: 5px 5px 5px 5px;
 }
 
 select {
@@ -58,4 +58,9 @@ select {
  font-family: 'Merriweather', serif;
  border: 1px solid #eee;
  display: block;
+}
+
+input[type="text"]
+{
+    font-size:24px;
 }
