--- a/views/books/index.erb
+++ b/views/books/index.erb
@@ -36,7 +36,7 @@
     <% elsif book.quantity < 3 %>
     <%= "low-stock" %>
     <% end %>>
-    <td><%= book.authors[0].full_name if book.authors.length > 0%></td>
+    <td><%= book.join_authors if book.authors.length > 0%></td>
     <td>|</td>
     <td><%= book.name %></td>
     <td>|</td>
