--- a/views/books/delete.erb
+++ b/views/books/delete.erb
@@ -2,15 +2,15 @@
 
 <form method="post" action="/books/<%= @books.id %>/delete">
   <label for="book-name">Book Name</label>
-  <input type="text" name="name" id="book-name" value="<%=@books.name%>">
+  <input type="text" name="name" id="book-name" value="<%=@books.name%>" readonly>
   <label for="description">Description</label>
-  <input type="text" name="description" id="description" value="<%=@books.description%>">
+  <input type="text" name="description" id="description" value="<%=@books.description%>" readonly>
   <label for="quantity">Quantity</label>
-  <input type="number" name="quantity" id="quantity" value="<%=@books.quantity%>">
+  <input type="number" name="quantity" id="quantity" value="<%=@books.quantity%>" readonly>
   <label for="price">Price</label>
-  <input type="number" step="0.01" name="price" id="price" value="<%= @books.price%>">
+  <input type="number" step="0.01" name="price" id="price" value="<%= @books.price%>" readonly>
   <label for="cost">Cost</label>
-  <input type="number" step="0.01" name="cost" id="cost" value="<%= @books.cost%>">
-  <br>
+  <input type="number" step="0.01" name="cost" id="cost" value="<%= @books.cost%>" readonly>
+  <br><br>
       <input type="submit" value="Delete Book">
 </form>
