--- a/views/authors/delete.erb
+++ b/views/authors/delete.erb
@@ -2,9 +2,9 @@
 
 <form method="post" action="/authors/<%= @author_delete.id %>/delete">
   <label for="first-name">First Name</label>
-  <input type="text" name="first_name" id="first-name" value="<%=@author_delete.first_name%>">
+  <input type="text" name="first_name" id="first-name" value="<%=@author_delete.first_name%>" readonly>
   <label for="last-name">Last Name</label>
-  <input type="text" name="last_name" id="last-name" value="<%=@author_delete.last_name%>">
+  <input type="text" name="last_name" id="last-name" value="<%=@author_delete.last_name%>" readonly>
   <br><br>
       <input type="submit" value="Delete Author">
 </form>
