--- a/views/publishers/delete.erb
+++ b/views/publishers/delete.erb
@@ -2,7 +2,7 @@
 
 <form method="post" action="/publishers/<%= @publisher.id %>/delete">
   <label for="publisher-name">Publisher Name</label>
-  <input type="text" name="name" id="publisher-name" value="<%=@publisher.name%>">
+  <input type="text" name="name" id="publisher-name" value="<%=@publisher.name%>" readonly>
   <br><br>
       <input type="submit" value="Delete Publisher">
 </form>
