fixing wallpaper to make it less busy

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Homegrown Books</title>
+  <title>HomeGrown Books</title>
   <link rel="stylesheet" type="text/css" href="/styles/tables.css">
   <link rel="stylesheet" type="text/css" href="/styles/nav.css">
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
